# k8s-example-rs

./: Cargo.toml  README.md
src/: main.rs
