[package]
name = "k8s-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.82.2", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
futures = "0.3.28"

kube-client = "0.82.2"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }



